test/bad_multidef_nonterm.zb
// error
// Copyright 2015 The Zebu Authors. All rights reserved.
// Test: previous defined is reported at each redeclaration

grammar ll_arith ;

INTEGER : [1-9][0-9]*	;
INTEGER : [1-9][0-9]*	;	// ERROR .*previously defined

start
	: expr
	;

expr
	: '0'
	;

expr			// ERROR .*previously defined
	: '0'
	;

expr			// ERROR .*previously defined
	: '0'
	;
